made open project spawn new window

--- a/src/main/glade/VR_Main.glade
+++ b/src/main/glade/VR_Main.glade
@@ -342,6 +342,20 @@
                     <property name="homogeneous">True</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkToolButton" id="toolViewRDoc">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="tooltip_text" translatable="yes">Open Documentation in browser.</property>
+                    <property name="label" translatable="yes">View Docs</property>
+                    <property name="use_underline">True</property>
+                    <property name="stock_id">gtk-info</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
