--- a/examples/70_listview/src/glade/SongListViewGUI.glade
+++ b/examples/70_listview/src/glade/SongListViewGUI.glade
@@ -16,12 +16,12 @@
         <property name="margin-top">20</property>
         <property name="margin-bottom">20</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">15</property>
+        <property name="spacing">20</property>
         <child>
           <object class="GtkLabel" id="label1">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="label" translatable="yes">&lt;big&gt;ListView Demo&lt;/big&gt;</property>
+            <property name="label" translatable="yes">&lt;big&gt;&lt;big&gt;&lt;b&gt;ListView Demo&lt;/b&gt;&lt;/big&gt;&lt;/big&gt;</property>
             <property name="use-markup">True</property>
           </object>
           <packing>
@@ -48,10 +48,12 @@
           </packing>
         </child>
         <child>
-          <!-- n-columns=3 n-rows=4 -->
+          <!-- n-columns=2 n-rows=4 -->
           <object class="GtkGrid" id="grid2">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="row-spacing">10</property>
+            <property name="column-spacing">10</property>
             <property name="column-homogeneous">True</property>
             <child>
               <object class="GtkCheckButton" id="invisible">
@@ -166,18 +168,6 @@
                 <property name="left-attach">1</property>
                 <property name="top-attach">2</property>
               </packing>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
             </child>
           </object>
           <packing>
