--- a/src/main/glade/VR_Main.glade
+++ b/src/main/glade/VR_Main.glade
@@ -4,15 +4,15 @@
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
     <property name="can-focus">False</property>
-    <property name="window-position">center</property>
     <property name="default-width">900</property>
     <property name="default-height">600</property>
     <property name="icon-name">accessories-text-editor</property>
-    <property name="has-resize-grip">True</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
+        <property name="hexpand">True</property>
+        <property name="vexpand">True</property>
         <property name="resize-mode">queue</property>
         <property name="orientation">vertical</property>
         <child>
