--- a/examples/08_interrupt_exit/src/glade/InterruptExit.glade
+++ b/examples/08_interrupt_exit/src/glade/InterruptExit.glade
@@ -4,7 +4,10 @@
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
     <property name="can-focus">False</property>
+    <property name="modal">True</property>
     <property name="window-position">center</property>
+    <property name="default-width">600</property>
+    <property name="default-height">400</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
@@ -37,8 +40,21 @@
             <property name="halign">end</property>
             <property name="spacing">15</property>
             <child>
-              <object class="GtkButton" id="ui_exit_btn">
-                <property name="label" translatable="yes">Exit</property>
+              <object class="GtkButton" id="ui_destroy_btn">
+                <property name="label" translatable="yes">Destroy, Don't Ask</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="ui_ask_btn">
+                <property name="label" translatable="yes">Ask To Exit</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
@@ -47,7 +63,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -61,7 +77,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
