Working on Examples

--- a/examples/05_menus/src/glade/Menus.glade
+++ b/examples/05_menus/src/glade/Menus.glade
@@ -114,7 +114,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkToolbar" id="ui_tool">
+          <object class="GtkToolbar">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <child>
