--- a/src/main/glade/Find_Replace.glade
+++ b/src/main/glade/Find_Replace.glade
@@ -129,7 +129,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="button_ReplaceAll">
+              <object class="GtkButton" id="buttonReplaceAll">
                 <property name="label" translatable="yes">Replace All</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
