--- a/examples/35_child_window/src/glade/ChildWindowDemo.glade
+++ b/examples/35_child_window/src/glade/ChildWindowDemo.glade
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
     <property name="can-focus">False</property>
     <property name="window-position">center</property>
     <property name="default-width">400</property>
+    <property name="destroy-with-parent">True</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
