--- a/lib/glade/AlertDialog.glade
+++ b/lib/glade/AlertDialog.glade
@@ -3,19 +3,24 @@
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkDialog" id="window1">
+    <property name="width-request">400</property>
+    <property name="height-request">200</property>
     <property name="can-focus">False</property>
+    <property name="default-width">400</property>
+    <property name="default-height">200</property>
     <property name="type-hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can-focus">False</property>
-        <property name="margin-start">20</property>
-        <property name="margin-end">20</property>
-        <property name="margin-top">20</property>
+        <property name="margin-start">30</property>
+        <property name="margin-end">30</property>
+        <property name="margin-top">36</property>
         <property name="margin-bottom">20</property>
         <property name="orientation">vertical</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox">
             <property name="can-focus">False</property>
+            <property name="margin-top">10</property>
             <property name="layout-style">end</property>
             <child>
               <object class="GtkButton" id="button_cancel">
@@ -65,14 +70,12 @@
           <object class="GtkBox" id="box1">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="margin-top">20</property>
-            <property name="margin-bottom">20</property>
+            <property name="margin-bottom">34</property>
             <property name="orientation">vertical</property>
+            <property name="spacing">15</property>
             <child>
               <object class="GtkLabel" id="headline">
                 <property name="can-focus">False</property>
-                <property name="margin-top">10</property>
-                <property name="margin-bottom">10</property>
                 <property name="label" translatable="yes">label</property>
                 <attributes>
                   <attribute name="size" value="18000"/>
@@ -88,18 +91,33 @@
               <object class="GtkLabel" id="message">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-top">10</property>
-                <property name="margin-bottom">10</property>
+                <property name="valign">start</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
                 <property name="label" translatable="yes">label</property>
                 <property name="use-markup">True</property>
                 <property name="wrap">True</property>
               </object>
               <packing>
-                <property name="expand">True</property>
+                <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkBox" id="boxData">
+            <property name="can-focus">False</property>
+            <property name="margin-bottom">30</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
+            <property name="orientation">vertical</property>
             <child>
               <object class="GtkEntry" id="input_text">
                 <property name="can-focus">True</property>
@@ -107,7 +125,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">2</property>
+                <property name="position">0</property>
               </packing>
             </child>
             <child>
@@ -117,7 +135,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">3</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -146,16 +164,16 @@
                 </child>
               </object>
               <packing>
-                <property name="expand">True</property>
+                <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">4</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="position">1</property>
+            <property name="position">3</property>
           </packing>
         </child>
       </object>
